--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Your Website Title
-title: Melvin Ch'ng
+title: Zhihan Liao
 
 # Your Website URL
-url: 'http://your-url.github.io'
+url: 'http://liao-zhihan.github.io'
 
 # Leave it default
 baseurl: '' 
@@ -12,15 +12,15 @@ ga_index: UA-XXXXXXXX-X
 ga_cv: UA-XXXXXXXX-X
 
 # Index page and Profile Information
-name: Melvin Ch'ng
-tagline: Software Developer, IoT, Reverse Engineering
+name: Zhihan Liao
+tagline: Software Engineer, SLAM
 pic: profile.png # profile.png can be found at /assets/images/profile.png
-description: Full Stack Developer, IoT, Reverse Engineering
+description: love coding, love life
 description_tiny: 'Home: +60-4 | Studied: +1-408 | Work: +60-3'
-email: you.email.email@gmail.com
-website: melvinchng.github.io # do not add http://
-linkedin: realmelvinchng
-github: melvinchng
+email: 499174318@qq.com
+website: liao-zhihan.github.io # do not add http://
+linkedin: 
+github: liao-zhihan
 twitter: '@realmelvinchng'
 
 # Files or folders to be excluded
